--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
       <div></div><div></div><div></div>
     </div>
     <div class="dropdown" id="dropdownMenu">
-      <a href="https://smart-bowling.github.io/PARTS-BB/">
+      <a href="https://smart-bowling.github.io/PARTS-SKYMALL/">
         <span class="icon-space"><i class="fas fa-cube"></i></span>ДЕТАЛИ
       </a>
       <a href="https://docs.google.com/spreadsheets/d/1ZQUBD4jX7x3BLEMHj0CYSYZrr_2Zjq-_C5pYO8IFPnA/edit?usp=sharing">
