--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>SMB BB</title>
+  <title>SMB SKYMALL</title>
   <link rel="icon" type="image/png" href="https://i.postimg.cc/dtSpKx0W/1.png" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <style>
@@ -427,7 +427,7 @@
 
   <header>
     <div class="logo"><img src="https://i.postimg.cc/wjGzSY92/1.png" alt="Logo"></div>
-    <div class="site-name">BLOCKBUSTER</div>
+    <div class="site-name">SKYMALL</div>
     <div class="menu-button" onclick="toggleDropdown()">
       <div></div><div></div><div></div>
     </div>
