--- a/index.html
+++ b/index.html
@@ -516,8 +516,8 @@
       <a href="https://smart-bowling.github.io/PARTS-SKYMALL/">
         <span class="icon-space"><i class="fas fa-cube"></i></span>ДЕТАЛИ
       </a>
-      <a href="https://docs.google.com/spreadsheets/d/1ZQUBD4jX7x3BLEMHj0CYSYZrr_2Zjq-_C5pYO8IFPnA/edit?usp=sharing">
-        <span class="icon-space"><i class="fas fa-exclamation-triangle"></i></span>СБОИ PS
+      <a href="https://smart-bowling.github.io/PS-STOP-SKYMALL/">
+        <span class="icon-space"><i class="fas fa-exclamation-triangle"></i></span>STOP LANE
       </a>
     </div>
   </header>
