--- a/index.html
+++ b/index.html
@@ -552,7 +552,7 @@
 
   <script>
     const GAS_URL = 'https://script.google.com/macros/s/AKfycbyB588wg_q1ouNVjuHQzQqM0I096g4VNK_SUs1WcmliKDu5lMhZfklX5JZjodiyZC59qA/exec';
-    const allowedEmails = ["vadiksss900@gmail.com", "sergey99belov@gmail.com"];
+    const allowedEmails = ["vadiksss900@gmail.com", "sasha380sheyd@gmail.com"];
 
     let fullData = [];
     let currentPage = 1;
